--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "bluebird": "^3.4.3",
     "domhandler": "^2.3.0",
     "domutils": "^1.5.1",
-    "dotenv": "^2.0.0",
     "htmlparser2": "^3.9.1",
     "lodash.camelcase": "^4.3.0",
     "lodash.memoize": "^4.1.2",
     "moment": "^2.14.1",
     "superagent": "^2.2.0",
-    "superagent-promise-plugin": "^3.2.0"
+    "superagent-promise-plugin": "^3.2.0",
+    "jcore-api": "^1.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
@@ -30,7 +30,7 @@
     "babel-plugin-transform-runtime": "^6.12.0",
     "babel-preset-es2015-node5": "^1.2.0",
     "babel-preset-stage-1": "^6.13.0",
-    "flow-bin": "^0.31.1",
-    "jcore-api": "^1.1.1"
+    "dotenv": "^2.0.0",
+    "flow-bin": "^0.31.1"
   }
 }
