--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "domhandler": "^2.3.0",
     "domutils": "^1.5.1",
     "htmlparser2": "^3.9.1",
+    "jcore-api": "^1.1.1",
     "lodash.camelcase": "^4.3.0",
     "lodash.memoize": "^4.1.2",
     "moment": "^2.14.1",
     "superagent": "^2.2.0",
-    "superagent-promise-plugin": "^3.2.0",
-    "jcore-api": "^1.1.1"
+    "superagent-throttle": "^0.1.1",
+    "superagent-use": "0.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
