--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.14.1",
     "phantomjs-prebuilt": "^2.1.12",
     "superagent": "^2.2.0",
+    "superagent-charset": "^1.1.1",
     "superagent-throttle": "^0.1.1",
     "superagent-use": "0.0.1",
     "webdriverio": "^4.2.16"
