--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash.memoize": "^4.1.2",
     "moment": "^2.14.1",
     "superagent": "^2.2.0",
+    "superagent-charset": "^1.1.1",
     "superagent-throttle": "^0.1.1",
     "superagent-use": "0.0.1"
   },
