--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "domhandler": "^2.3.0",
     "domutils": "^1.5.1",
     "htmlparser2": "^3.9.1",
-    "jcore-api": "^1.1.1",
+    "jcore-api": "^1.2.0-beta.1",
     "lodash.camelcase": "^4.3.0",
     "lodash.memoize": "^4.1.2",
     "moment": "^2.14.1",
