--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jcore-api": "^1.2.0-beta.1",
     "lodash.camelcase": "^4.3.0",
     "lodash.memoize": "^4.1.2",
+    "lodash.omitby": "^4.6.0",
     "moment": "^2.14.1",
     "superagent": "^2.2.0",
     "superagent-charset": "^1.1.1",
